--- a/public/_index.html
+++ b/public/_index.html
@@ -8,7 +8,7 @@
     socket.on('message', function(data) {
       data = JSON.parse(data);
       console.log(data);
-      document.write('<pre>' + JSON.stringify(data.segments, 2) + '</pre>');
+      //document.write('<pre>' + JSON.stringify(data.segments, 2) + '</pre>');
     });
   </script>
 </head>
