--- a/public/index1.html
+++ b/public/index1.html
@@ -29,15 +29,18 @@
   <script>
   	window.de04 = {};
   	window.de04.isInit = false;
-  	window.de04.intialize = function () { window.de04.isInit = true; }
-    var socket = eio.Socket();
-    socket.on('message', function(data) {
-      data = JSON.parse(data);
-      console.log(data);
-      if(window.de04.isInit) {
-	      (document.querySelector('object')).emit(data.segments);
-      }
-    });
+  	window.de04.intialize = function () { 
+  		window.de04.isInit = true;
+  		var socket = eio.Socket();
+	    socket.on('message', function(data) {
+	      data = JSON.parse(data);
+	      console.log(data.segments);
+	      if(window.de04.isInit) {
+		      (document.querySelector('object')).emit(data.segments);
+	      }
+	    });
+  	}
+    
   </script>
 <body>
 	<script type="text/javascript">
