--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,15 @@
  <script src="/engine.io.js"></script>
 <script>
 var socket = eio.Socket();
+socket.on('open', function() {
+	console.log("open");
+	socket.send("eee");
+});
+socket.on('error', function(data) {
+	console.log(data);
+});
 socket.on('message', function(data) {
-	data = JSON.parse(data);
+	//data = JSON.parse(data);
 	console.log(data.segments);
 });
 </script>
